--- a/top.html
+++ b/top.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta property="or:locale" content="ja_JP">
     <div>
-      <h1>git prctice</h1>
+      <h1>git prcatice</h1>
       <p>資料</p>
       <a href="https://git-scm.com/book/ja/v2">Pro Git</a><br>
       <a href="https://qiita.com/para7/items/0a2b1fe0a1aba6690495">そろそろGUIじゃなくてCUIでgitを使ってみたい人向け講座 - Qiita</a><br>
