n# Please enter the commit message for your changes. Lines starting  commit

--- a/top.html
+++ b/top.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta property="or:locale" content="ja_JP">
-    <div>
+    </head><div>
       <h1>git prcatice</h1>
       <p>資料</p>
       <a href="https://git-scm.com/book/ja/v2">Pro Git</a><br>
