--- a/top.html
+++ b/top.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta property="or:locale" content="ja_JP">
+  </head>
+  <body>
     <div>
       <h1>git prcatice</h1>
       <p>資料</p>
